[package]
name = "wtinylfu"
version = "0.1.1"
authors = ["asyncth <asyncthry@gmail.com>"]
edition = "2021"
description = "An implementation of W-TinyLFU cache"
readme = "README.md"
repository = "https://git.sr.ht/~asyncth/wtinylfu"
license = "MIT"
keywords = ["cache", "lru", "lfu", "tinylfu", "w-tinylfu"]
categories = ["algorithms", "caching", "data-structures"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
bloomfilter = "1"
count-min-sketch = "0.1.7"
lru = { version = "0.12", default-features = false }
